# deemak

./: .env  .gitignore  Cargo.toml  README.md  database.json  keys.rs  sekai.deemak
.github/workflows/: ci.yml
_tutorial/: README  keys_mouse  library  main_building  moving_around  whoareyou
_tutorial/.dir_info/: info.json  restore_me.deemak  save_me.deemak
_tutorial/classroom/: filesystem  unlock_me
_tutorial/classroom/.dir_info/: info.json
_tutorial/classroom/advanced/: copy_files  creation_deletion
_tutorial/mess/: .opb_pass  crush  food  friend
_tutorial/opb/: .lost_notebook  senpai  ugcl  wifiroom
_tutorial/opb/labs/: .databased  bio_lab  (+4 more)
sekai/: README  main_building
sekai/.dir_info/: info.json  restore_me  restore_me.deemak  save_me.deemak
sekai/mess/: .opb_pass  crush  food  friend
src/: auth.rs  gui_main.rs  gui_shell.rs  lib.rs  login.rs  main.rs  screen.rs  scroll.rs  server.rs
src/commands/: argparser.rs  cmds.rs  copy.rs  del.rs  go.rs  help.rs  ls.rs  mod.rs  read.rs  restore.rs  save.rs  solve.rs  tap.rs  tests.rs  unlock.rs
src/menu/: about.rs  menu_options.rs  mod.rs  settings.rs
src/metainfo/: info_reader.rs  lock_perm.rs  mod.rs  tests.rs  valid_sekai.rs
src/rns/: create_dmk_sekai.rs  locky.rs  mod.rs  passlock.rs  restore_comp.rs  security.rs  tests.rs
src/utils/: auth.rs  cleanup.rs  config.rs  file_mgr.rs  find_root.rs  global_font.rs  globals.rs  info_reader.rs  log.rs  mod.rs  print_deemak.rs  prompt.rs  shell_history.rs  test_utils.rs  tests.rs  valid_sekai.rs
static/: config.js  index.css  index.html  index.js
(+26 files in other folders)
