[package]
name = "deemak"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = []

[dependencies]
raylib = "5.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
textwrap = "0.16.2"
flate2 = "1.1.1"
tar = "0.4.44"
once_cell = "1.18"
dotenvy = "0.15"       # For environment variables
rocket = { version = "0.5.1", features = ["json","tls"]} # For  backend server
jsonwebtoken = "9"     # For JWT
rand = "0.9.1"           # Salt generation
rocket_cors = "0.6"    # for frontend requests
ring = "0.17"
data-encoding = "2.4.0"
chrono = "0.4"         # for token expiry
sha3 = "0.10.8"
base64ct = "1.8.0"
tempfile = "3.10.1"
walkdir = "2.5.0"
clap = { version = "4.5.41", features = ["derive"] }
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.9"
xattr = "1.5.1"
zeroize = "1.8.1"

[dev-dependencies]
tempfile = "3.10.1"


[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
